--- a/todos_project/todos/static/todos/css/todos.css
+++ b/todos_project/todos/static/todos/css/todos.css
@@ -1,4 +1,11 @@
-/* CSS specific to Todos */
+/*
+ ******************************************************************************
+ * FILE     : todos.css
+ * SYNOPSIS : All CSS specific to this app is found here.
+ * LICENSE  : MIT
+ ******************************************************************************
+ */
+
 body {
     background-color: black;
     color: white;
@@ -17,3 +24,10 @@ a:hover {
 .todos {
     width: 100%;
 }
+
+
+/*
+ ******************************************************************************
+ * END
+ ******************************************************************************
+ */
