Task colour stops updating if it is completed

--- a/todos_project/todos/static/todos/css/todos.css
+++ b/todos_project/todos/static/todos/css/todos.css
@@ -25,6 +25,10 @@ a:hover {
     width: 100%;
 }
 
+.todo {
+    background-color: dimgrey;
+}
+
 
 /*
  ******************************************************************************
