--- a/todos_project/todos/templates/todos/show.html
+++ b/todos_project/todos/templates/todos/show.html
@@ -13,6 +13,7 @@
       <li>Location: {{todo.location}}</li>
       <li>Done: {{todo.done}}</li>
       <li>Created: {{todo.created}}</li>
+      <li>Updated: {{todo.updated}}</li>
     </ul>
   </div>
   
