--- a/todos_project/todos/templates/todos/delete.html
+++ b/todos_project/todos/templates/todos/delete.html
@@ -13,7 +13,7 @@
       <!-- Security token -->
       {% csrf_token %}
 
-      <strong>Are you sure you want to delete this Todo ?</strong>
+      <strong>Are you sure you want to delete this task ?</strong>
       <input type="submit" value="Yes" />
     </form>
   </div>
